maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: not found: value setDection
    if(somme==0){setDection(Direction.NORTH)}
                 ^